fix: z-index issue

--- a/src/components/PlayerStats/ContentGraphs/FilteredGraphs/GraphsHeader/GraphsHeader.module.scss
+++ b/src/components/PlayerStats/ContentGraphs/FilteredGraphs/GraphsHeader/GraphsHeader.module.scss
@@ -3,6 +3,7 @@
   padding: 0.625rem 0;
   position: sticky;
   top: -1px;
+	z-index: 2;
 
   > h3 {
     text-align: center;
